# itlab_pizza

./: .gitignore  Dockerfile  README.md  const.py  docker-compose.yml  itlab.sqlite3  manage.py  pyproject.toml  requirements.txt
archive/: urls.py
archive/migrations/: 0001_initial.py
archive/models/: archive_order.py
archive/serializers/: archive_order.py
archive/tests/: model_tests.py
archive/views/: archive_order.py
assortment/: admin.py  permissions.py  router.py  urls.py
assortment/migrations/: 0001_initial.py  0002_alter_category_name_alter_product_category.py  0002_remove_drink_image_remove_pizza_image.py  0003_remove_drink_id_remove_pizza_id_alter_drink_slug_and_more.py
assortment/models/: category.py  coupon.py  drink.py  models.py  pizza.py  product.py  product_abstract.py
assortment/serializers/: category.py  coupon.py  drink.py  pizza.py  product.py
assortment/views/: category.py  coupon.py  drink.py  list_views.py  pizza.py  product.py  utils.py
auth_and_permissions/: admin.py  apps.py  models.py  permissions.py
auth_and_permissions/migrations/: 0001_initial.py
coupon/: admin.py  router.py  serializers.py  urls.py  views.py
coupon/migrations/: 0001_initial.py
coupon/models/: coupon.py
coupon/serializers/: coupon.py
coupon/views/: coupon.py
docs/: technical_requirements.md
main_logic/: apps.py  models.py
order/: admin.py  models.py  router.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py  order_item.py
order/views/: order.py  (+2 more)
pizza_itlab/: asgi.py  settings.py  swagger.py  urls.py  wsgi.py
(+2 files in other folders)
